# sparks-connect

./: .gitignore  README.md
.github/workflows/: release.yml
app/: index.html  package-lock.json  package.json
app/scripts/: deploy-release.js
app/src/: App.jsx  config.ts
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/icons/: icon.icns
app/src-tauri/src/: lib.rs  main.rs  ssh_builder.rs  ssh_parser.rs
app/src/components/: CommandPalette.jsx  Dashboard.jsx  DeleteModal.jsx  HostModal.jsx  ImportModal.jsx  Sidebar.jsx  Tabs.jsx  TerminalGrid.jsx  TerminalView.jsx  VaultProvider.tsx
app/src/services/: cryptoService.ts  vaultService.ts
app/src/styles/: dashboard.css  global.css  login.css  modal.css  palette.css  sidebar.css  tabs.css  terminal.css  variables.css
backend/: .env.example  db.js  migrate.js  migrate_permissions.js  migrate_phase2.js  migrate_phase3.js  migrate_vault.js  package-lock.json  package.json  server.js
backend/controllers/: authController.js  groupController.js  hostController.js  telemetryController.js  vaultController.js
backend/middleware/: auth.js
backend/models/: groupModel.js  hostModel.js  logModel.js  organizationModel.js  sessionModel.js  statsModel.js  teamGroupModel.js  userModel.js  vaultModel.js
backend/routes/: auth.js  groups.js  hosts.js  tags.js  telemetry.js  vault.js
backend/utils/: crypto.js
web/: package-lock.json  package.json  proxy.js  server.js  tailwind.config.js  vite.config.ts
web/scaffolding/: package-lock.json  package.json
web/src/: App.tsx  index.css  main.tsx
(+43 files in other folders)
