[package]
name = "SparksConnect"
version = "0.1.0"
description = "SparkConnect Terminal App"
authors = ["Arab Hossain"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
tauri = { version = "2.10.3", features = [] }
tauri-plugin-log = "2"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"

ssh2 = "0.9"
once_cell = "1.19"
portable-pty = "0.8"
